# svgmaker-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 13f27f331fae_add_account_actions.py  9c0f8b0f0f4d_add_edit_requests.py  c70e03eb010a_initial_schema.py  f56fe2bf5f2a_add_telegram_bot_tables.py
src/svgmaker_proxy/: bootstrap.py  stack.py
src/svgmaker_proxy/api/: app.py
src/svgmaker_proxy/clients/: firebase_identity.py  http.py  svgmaker_auth.py  svgmaker_generation.py
src/svgmaker_proxy/core/: config.py  logging.py
src/svgmaker_proxy/mcp/: __init__.py  server.py
src/svgmaker_proxy/models/: account.py  account_action.py  generation.py  telegram.py
src/svgmaker_proxy/services/: account_action_logger.py  account_pool.py  account_registrar.py  generation_proxy.py  gmail_verification.py
src/svgmaker_proxy/storage/: account_action_repository.py  account_repository.py  db.py  edit_repository.py  generation_repository.py  orm.py  telegram_invite_code_repository.py  telegram_user_repository.py
src/svgmaker_proxy/telegram/: app.py  create_invite.py  service.py  session.py
tests/clients/: test_client_wiring_proxy.py  test_generation_and_telegram_http_wiring.py  test_generation_non_stream_mode.py  test_http_client_builder.py
tests/core/: test_config_http_proxy.py  test_config_stream_enabled.py  test_config_telegram_proxy.py
tests/telegram/: test_app_uses_proxy_session.py  test_session.py  test_stack_uses_proxy_session.py
