[project]
name = "svgmaker-proxy"
version = "0.1.0"
description = "Async account registrar, email verifier, and round-robin proxy for SVGMaker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.21.0",
  "aiogoogle>=5.17.0",
  "alembic>=1.16.0",
  "asyncpg>=0.30.0",
  "cairosvg>=2.8.2",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "greenlet>=3.3.2",
  "httpx>=0.28.0",
  "mcp[cli]",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-dotenv>=1.1.0",
  "sqlalchemy>=2.0.41",
  "structlog>=25.4.0",
  "tenacity>=9.1.0",
  "uvicorn[standard]>=0.35.0",
  "aiohttp-socks>=0.11.0",
]

[project.scripts]
svgmaker-proxy-mcp = "svgmaker_proxy.mcp.server:main"
svgmaker-proxy-stack = "svgmaker_proxy.stack:main"
svgmaker-proxy-telegram-bot = "svgmaker_proxy.telegram.app:main"
svgmaker-proxy-create-invite = "svgmaker_proxy.telegram.create_invite:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/svgmaker_proxy"]
